# repository-rs

./: Cargo.toml  README.md
repository-macros/: Cargo.toml
repository-macros/src/: adt.rs  lib.rs  utils.rs
repository-macros/src/adt/: item_adt.rs
repository-macros/src/utils/: adt.rs
src/: lib.rs  prealloc_tx.rs  slab.rs
tests/: 001-data_interned.rs  001_data_interned.rs  002_entity_basic.rs  003_entity_field_ref.rs  004_singleton.rs  005_decorate_field.rs
