[package]
name = "repository"
version = "0.0.1"
authors = ["Charles Lew <crlf0710@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A repository for all kinds of entities."
repository = "https://github.com/crlf0710/repository-rs"

[dependencies]
hashbrown = {version = "0.8.0", features = ['raw']}
thiserror = "1.0.20"
